--- a/Project1.csproj
+++ b/Project1.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -80,6 +81,27 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Face1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Face_6.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Face_5.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Face_4.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Face_3.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Face_2.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Face_1.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
