--- a/Project1.csproj
+++ b/Project1.csproj
@@ -48,6 +48,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="aDie.cs" />
+    <Compile Include="aRandomVariable.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
